# IDCardOCR

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_IGNORE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  RISK_AND_OPTIMIZATION_ANALYSIS.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: BUGFIX_CONFIG_PARAMETER.md  EXCEL_ID_NUMBER_FIX.md  IMAGE_COMPRESSION_FEATURE.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  USAGE_GUIDE.md
inputs/: .gitkeep
manual_review/: .gitkeep
outputs/: .gitkeep
src/: config.py  constants.py  extract_id_cards.py  tencentcloud_idcard_ocr.py
src/utils/: compare_inputs_outputs.py  convert_skipped_files.py  fix_id_numbers.py  parse_log.py
