[project]
name = "idcardocr"
version = "0.2.0"
description = "ID Card OCR processing using Tencent Cloud API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv~=1.0.0",
    "pillow~=10.0",
    "PyMuPDF~=1.23.0",
    "pytesseract~=0.3.10",
    "requests~=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "black~=23.12.0",
    "pylint~=3.0.0",
    "mypy~=1.7.0",
]
